# MidiPortal

./: .gitignore  CMakeLists.txt  CMakePresets.json  How to add or remove components from the color selector sections  MidiPortal_Architecture_Guide.md  README.md  build.sh  compile_commands.json
.github/workflows/: build.yml
Notes/: Build and Run Commands Cheatsheet  Git Cheatsheet
Notes/Architecture Guide | Overview | Dev Plans/: ARCHITECTURE.md  Plugin Version Update Checklist  Project Context Core Concept
Notes/Build | Git/: Build and Run Commands Cheatsheet  Git Cheatsheet  Git Main Protocol.md
Notes/Key Issues | Solutions/: Add New Menu Items For Windows  Add Or Remove Components From Color Selectors  Clang_Build_System_Fix  How_to_Add_UI_Components_and_Features.md  juce::FontOptions deprecated class error
cmake/toolchains/: macos-clang.cmake
plugin/: CMakeLists.txt
plugin/source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
rust/: Cargo.toml
rust/midi_engine/: Cargo.toml
rust/midi_engine/src/: lib.rs  midi_processor.rs  mpe.rs  note_tracker.rs  sysex.rs
rust/src/: lib.rs  midi_engine.rs  shared_buffer.rs
rust/src/midi_engine/: Cargo.toml
rust/src/midi_engine/src/: lib.rs  mpe.rs
rust/src/ml/: context.rs  mod.rs  pattern.rs
shared/: CMakeLists.txt
shared/include/: RustBindings.h
shared/source/: AIInsightComponent.cpp  AIInsightComponent.h  DisplaySettingsManager.cpp  DisplaySettingsManager.h  LogDisplaySettingsComponent.cpp  LogDisplaySettingsComponent.h  LogDisplaySettingsWindow.h  LogDisplayWindow.h  MainComponent.cpp  MainComponent.h  MidiAIManager.cpp  MidiAIManager.h  MidiActivityIndicator.cpp  MidiActivityIndicator.h  MidiChannelSelector.cpp  MidiChannelSelector.h  MidiLogDisplay.cpp  MidiLogDisplay.h  MidiLogger.cpp  MidiLogger.h  RustMidiEngine.h  SettingsComponent.cpp  SettingsComponent.h  SettingsManager.h  SettingsSection.h  SettingsWindow.h  SharedMidiBuffer.cpp  SharedMidiBuffer.h  WindowManager.cpp  WindowManager.h  WindowRoutingComponent.cpp  WindowRoutingComponent.h  WindowRoutingWindow.h
standalone/: CMakeLists.txt
standalone/source/: Main.cpp  Standalone.cpp  Standalone.h
test/: CMakeLists.txt
